фиксы по сверке
